<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_packages"
        android:icon="@drawable/ic_add"
        android:title="@string/add_packages"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_statistics"
        android:icon="@drawable/ic_list"
        android:title="@string/list"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_graphics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        app:showAsAction="always" />

</menu>


    <!--android:actionLayout="@layout/menu_custom" -->