<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".scenes.create_new.questions.TrueFalseQuestionFragment">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/trueButton"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/titleTextView"
            android:layout_alignParentTop="true"
            android:background="@drawable/rounded_khaky"
            android:text="@string/true_button"
            android:textAlignment="center"
            android:textColor="@color/darkGray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/falseButton"
            app:layout_constraintTop_toTopOf="@+id/falseButton" />

        <Button
            android:id="@+id/falseButton"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/titleTextView"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_khaky"
            android:text="@string/false_button"
            android:textAlignment="center"
            android:textColor="@color/darkGray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/trueButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sujectionSentenceEditText" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:text="@string/next_button"
            android:textAlignment="center"
            android:textColor="@color/olive"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/falseButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textColor="@color/olive"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nextButton"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/questionSentenceEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:hint="@string/white_your_hint"
            android:inputType="textCapSentences"
            android:paddingStart="20sp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/questionEntity"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/century_gothic"
            app:layout_constraintStart_toStartOf="@+id/questionSentenceEditText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/explication"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/century_gothic"
            app:layout_constraintStart_toStartOf="@+id/questionSentenceEditText"
            app:layout_constraintTop_toBottomOf="@+id/questionSentenceEditText" />

        <EditText
            android:id="@+id/sujectionSentenceEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shadow"
            android:ems="10"
            android:hint="@string/add_explication_optional_hint"
            android:inputType="textCapSentences"
            android:paddingStart="20sp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>