<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/remove_question_confirmation"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_alignStart="@+id/descriptionTextView"
        android:layout_alignTop="@+id/okTextView"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_confirmation_button"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/okTextView"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:layout_alignEnd="@+id/descriptionTextView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:text="@string/yes_confirmation_button"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cancelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toEndOf="@+id/cancelTextView"
        app:layout_constraintTop_toTopOf="@+id/cancelTextView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>